echo-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $name_upstream_1 $upstream_cookie__oauth2_proxy_1;

      access_by_lua_block {
        if ngx.var.name_upstream_1 ~= "" then
          ngx.header["Set-Cookie"] = "_oauth2_proxy_1=" .. ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
        end
      }
    
  labels:
    app.kubernetes.io/name: echo-server
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - monday.southeastasia.cloudapp.azure.com
      secretName: tls-secret
  rules:
  - host: monday.southeastasia.cloudapp.azure.com
    http:
      paths:
        - path: /echo
          pathType: Prefix
          backend:
            service:
              name: echoserver-service
              port:
                number: 8080
