echo-server/oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: monday.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
        path: /oauth2
        pathType: Prefix
  tls:
  - hosts:
    - monday.southeastasia.cloudapp.azure.com
    secretName: tls-secret
